fix: working on mobile, but sound not

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,11 @@ body {
   -webkit-tap-highlight-color: transparent;
 }
 
+button {
+  touch-action: manipulation;
+  cursor: pointer;
+}
+
 input[type="range"] {
   -webkit-appearance: none;
   appearance: none;
